update custom css

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -23,6 +23,7 @@
     max-width: calc(var(--nav-width) + var(--gap) * 2);
     margin-inline-start: auto;
     margin-inline-end: auto;
+    margin-top: 40px;
     margin-bottom: 25px;
 }
 
