--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -13,8 +13,11 @@
 
 
 .footer {
-    font-size: 14px;
-    padding: calc((var(--footer-height) - var(--gap))*2)var(--gap);
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    font-size: 13px;
+    padding: calc((var(--footer-height) - var(--gap))*1.5)var(--gap);
 }
 
 .footer a {
@@ -47,5 +50,9 @@
 @media (max-width: 800px) {
   #footer-menu {
     flex-direction: column;
+  }
+  .footer {
+    grid-template-columns: 1fr;
+    text-align: center;
   }
 }
